--- a/scss/modules/_form.scss
+++ b/scss/modules/_form.scss
@@ -43,11 +43,12 @@
     height: 100px
 }
 
-.form-btn {
-    padding: 18px;
+.form-btn-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 .btn-submit {
-    margin-left: 8px;
     padding: 15px;
     width: 250px;
 }
