--- a/scss/modules/_nav-bar-top.scss
+++ b/scss/modules/_nav-bar-top.scss
@@ -37,12 +37,13 @@
 }
 
 .icon-menu {
+    position: relative;
     margin-left: 20px;
     max-width: 100%;
     color: #80727B;
-    padding: 35px;
-    padding-right: 130px;
-    padding-left: 50px;
+    padding: 36px;
+    padding-right: 30px;
+    padding-left: 30px;
     border-radius: 5px;
     background-color: #48ACF0;
     font-size: 2rem;
